--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "commander": "^11.1.0",
     "dotenv": "^16.3.1",
     "lodash": "^4.17.21",
-    "node-fetch": "^3.3.2",
-    "ora": "^7.0.1"
+    "node-fetch": "^3.3.2"
   }
 }
