--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "author": "wolflu05",
   "dependencies": {
+    "ascii-table3": "^0.9.0",
     "chalk": "^5.3.0",
     "commander": "^11.1.0",
     "dotenv": "^16.3.1",
