--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "adventofcode",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./cli/index.js",
   "type": "module",
   "bin": {
     "aoc": "./cli/index.js"
