--- a/cli/package.json
+++ b/cli/package.json
@@ -23,7 +23,8 @@
     "chokidar": "^3.5.3",
     "commander": "^11.1.0",
     "dotenv": "^16.3.1",
-    "node-fetch": "^2.7.0"
+    "node-fetch": "^2.7.0",
+    "node-html-parser": "^6.1.11"
   },
   "devDependencies": {
     "@types/node": "^20.10.3",
